--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -139,7 +139,11 @@
 
 @media (max-width: 900px) and (orientation: landscape) {
   .intro-section {
-    padding: 70px 24px;
+    padding: 30px 24px 70px;
+  }
+
+  .intro-label {
+    margin-bottom: 16px;
   }
 
   .intro-heading {
